--- a/css/small.css
+++ b/css/small.css
@@ -45,6 +45,7 @@ body {
   top: 10px;
   height: 400px;
   width: 340px;
+  z-index: 1;
   /*The stamp cutout will be created using crisp radial gradients*/
   background: radial-gradient(
     transparent 0px,
@@ -75,6 +76,7 @@ body {
 }
 
 .card-details li {
+  cursor: pointer;
   display: inline;
 }
 
@@ -83,23 +85,8 @@ body {
   top: 1000px;
   transform: rotate(25deg);
   opacity: 20%;
+  z-index: -10;
 }
-
-.sample:after {
-  content: "";
-  position: absolute;
-  /*We can shrink the pseudo element here to hide the shadow edges*/
-  left: 5px;
-  top: 5px;
-  right: 5px;
-  bottom: 5px;
-  /*Shadow - doesn't look good because of the stamp cutout. We can still move this into another pseudo element behind the .stamp main element*/
-
-  /*box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.5);*/
-  /*pushing it back*/
-  z-index: -1;
-}
-
 
 .one-half.column {
   width: 100%;
